force-app/main/default/objects/Eligibility_Credit_Scoring__c/Eligibility_Credit_Scoring__c.object-meta.xml
<CustomObject>
    <label>Eligibility Credit Scoring</label>
    <nameField>
        <displayFormat>EC-{00000}</displayFormat>
        <label>Eligibility Credit Scoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>