force-app/main/default/objects/Eligibility_Credit_Scoring__c/fields/Credit_Point__c.field-meta.xml
<CustomField>
    <fullName>Credit_Point__c</fullName>
    <label>Credit Point</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>