force-app/main/default/objects/Eligibility_Credit_Scoring__c/fields/Gradulate__c.field-meta.xml
<CustomField>
    <fullName>Gradulate__c</fullName>
    <label>Graduation Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Graduation</fullName>
            </value>
            <value>
                <fullName>Post Graduation</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>