force-app/main/default/objects/Eligibility_Credit_Scoring__c/fields/Is_Non_Commerce_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Commerce_Graduation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non Commerce Graduation</label>
    <type>Checkbox</type>
</CustomField>