force-app/main/default/objects/Eligibility_Credit_Scoring__c/fields/Is_USP_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_USP_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is USP Eligible</label>
    <type>Checkbox</type>
</CustomField>