force-app/main/default/objects/Eligibility_Credit_Scoring__c/fields/Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Short_Code__c</fullName>
    <label>Short Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>